<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_operate_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:layout_marginBottom="@dimen/main_form_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/first_value_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/first_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:maxLines="1"
                        android:inputType="textCapCharacters"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.,- "
                        android:hint="@string/main_first_value" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/value_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/align_spinner_textinputlayout"
                    android:entries="@array/base_short"
                    style="@style/Widget.AppCompat.Spinner.Underlined" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:layout_marginBottom="@dimen/main_form_margin">

                <Spinner
                    android:id="@+id/operation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/align_spinner_textinputlayout"
                    android:entries="@array/operations"
                    style="@style/Widget.AppCompat.Spinner.Underlined" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/second_value_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/second_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:maxLines="1"
                        android:inputType="textCapCharacters"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.,- "
                        android:hint="@string/main_second_value" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/calculate_operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_calculate"
                style="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/operation_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>